# neco

./: CMakeLists.txt  neco.h
examples/: CMakeLists.txt
